FieldSupport: Make explanatory text at top fixed size to avoid vertical shifting.

--- a/extensions/field-support/fieldsupport.css
+++ b/extensions/field-support/fieldsupport.css
@@ -8,7 +8,7 @@
 
 .field-selection .instructions {
     width:200px;
-    min-width:100%;
+    xmin-width:100%;
     font-size:0.8em;
     margin:4pt;
     margin-bottom:0;
